# distributedAlgorithms

./: .gitignore  README.md
Lab1/: CMakeLists.txt  task2plot.py  task3plot.py  task4plot.py  utils.py
Lab1/src/: CMakeLists.txt  elect.cpp  task2.cpp  task3.cpp  task4.cpp  zad3.cpp
Lab1/src/election/: CMakeLists.txt  Election.cpp  Election.hpp  Network.cpp  Network.hpp  Node.cpp  Node.hpp
Lab1/src/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
